Rework of the app
Reworked the app into a spaced review reminder

--- a/components/note-card/note-card.wxml
+++ b/components/note-card/note-card.wxml
@@ -4,6 +4,6 @@
     {{note.title}}
   </view>
   <view class="note-card__content">
-    {{note.content || '新建笔记'}}
+    {{note.desc || '新建笔记'}}
   </view>
 </view>
