--- a/components/todo-item/todo-item.wxml
+++ b/components/todo-item/todo-item.wxml
@@ -1,6 +1,6 @@
 <!--components/todo-item/todo-item.wxml-->
 <view
-  class="todo-item todo-item--level{{ todo.level }} {{ todo.completed ? 'todo-item--completed' : '' }}">
+  class="todo-item todo-item--level1 {{ todo.completed ? 'todo-item--completed' : '' }}">
   <view class="todo-item__col1">
     <todo-checkbox
       class="todo-item__checkbox"
@@ -12,13 +12,10 @@
     <input
       class="todo-item__title"
       value="{{ todo.title }}"
-      placeholder="准备做什么？"
+      placeholder="复习条目关键词？"
       bindinput="handleTitleChange"
       auto-focus="{{ autoFocus }}">
     </input>
   </view>
-  <view class="todo-item__col3" bindtap="handleDateClick">
-    <!-- <text class="todo-item__date">{{ todo.date }}</text> -->
-    <picker class="todo-item__date" mode="date" bindchange="handleDateChange">{{ todo.date }}</picker>
-  </view>
+
 </view>
