--- a/app.wxss
+++ b/app.wxss
@@ -83,3 +83,20 @@ button::after {
 .button-round {
   border-radius: 300rpx;
 }
+
+/* todo-add */
+.todo-add {
+  position: fixed;
+  left: 80%;
+  bottom: 60rpx;
+  width: 90rpx;
+  height: 90rpx;
+  margin-left: -45rpx;
+  border-radius: 50%;
+  font-size: 60rpx;
+  line-height: 90rpx;
+  text-align: center;
+  background-color: #5872DE;
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
+  color: rgb(253, 247, 247);
+}
