--- a/pages/completed/index.wxml
+++ b/pages/completed/index.wxml
@@ -2,7 +2,7 @@
 <view class="page">
   <view
     wx:for="{{ notes }}"
-    wx:key="{{ item.uuid }}"
+    wx:key="uuid"
     class="ripple fast fadeInRight"
     style="animation-delay: {{ delay ? index * 0.1 : 0 }}s">
     <note-card
@@ -14,8 +14,8 @@
     </note-card>
   </view>
   <view class="ripple bounceIn" wx:if="{{ !notes.length }}">
-    <tips-info text="还没有笔记哦，快去新建一个吧！">
+    <tips-info text="暂无复习项">
     </tips-info>
   </view>
-  <view class="note-add" bindtap="handleAddNote">+</view>
+  <view class="todo-add" bindtap="handleAddNote">+</view>
 </view>
