--- a/pages/todo/create.wxml
+++ b/pages/todo/create.wxml
@@ -1,31 +1,26 @@
 <!--pages/todos/create.wxml-->
 <view class="page">
   <view class="field-set">
-    <view class="create-header">
-      <todo-item
-        todo="{{ todo }}"
-        bindchange="handleTodoItemChange"
-        auto-focus>
-      </todo-item>
-    </view>
-    <view class="field-item">
-      <label class="field-label">优先级</label>
+    <view class="field-item border-top">
+      <label class="field-label">标题</label>
       <label class="field-control">
-        <picker
-          class="w-full"
-          range="{{ levels }}"
-          value="{{ todo.level - 1 }}"
-          bindchange="handleLevelChange">
-          {{ levels[todo.level - 1] }}
-        </picker>
+        <input
+          class="field-input w-full"
+          value="{{ todo.title }}"
+          placeholder="what?"
+          auto-focus
+          bindinput="handleTitleChange">
+        </input>
       </label>
     </view>
-    <view class="field-item">
+
+    <view class="field-item border-top">
       <label class="field-label">描述</label>
       <label class="field-control">
         <textarea
           class="field-input w-full"
-          placeholder="任务描述..."
+          value="{{ todo.desc }}"
+          placeholder=""
           bindinput="handleDescChange">
         </textarea>
       </label>
