--- a/pages/todo/index.wxml
+++ b/pages/todo/index.wxml
@@ -2,44 +2,36 @@
 <view class="page">
   <view class="todo-list">
     <view class="todo-header">
-      进行中
+      今日需复习
     </view>
     <view
       wx:for="{{ todos }}"
-      wx:key="{{ index }}"
-      wx:if="{{ !item.completed }}"
-      class="todo-list__item ripple fast fadeInRight"
-      style="animation-delay: {{ delay ? index * 0.1 : 0 }}s">
-      <todo-item
-        class="todo-item"
-        todo="{{ item }}"
-        data-index="{{ index }}"
-        bindchange="handleTodoItemChange"
+      wx:key="index"
+      class="todo-list__item"
+      >
+      <view>
+        <todo-checkbox
+        class="todo-item__checkbox"
+        checked="{{ item.completed }}"
+        data-uuid="{{ item.uuid }}"
+        bindchange="handleCompletedChange">
+        </todo-checkbox>
+        <p
+        data-uuid="{{ item.uuid }}"
+        bindtap="handleTodoTap"
         bindlongtap="handleTodoLongTap">
-      </todo-item>
-    </view>
-    <view class="ripple bounceIn" wx:if="{{!uncompletedCount}}">
-      <tips-info text="太棒了，你的任务已全部完成啦！">
-      </tips-info>
-    </view>
+            {{item.title}}
+        </p>
+        <button
+        class="mini-btn"
+        type="default"
+        size="mini"
+        data-uuid="{{ item.uuid }}"
+        style="height:33px"
+        bindtap="handleForgot">
+            未掌握
+        </button>
   </view>
-  <view wx:if="{{ completedCount }}" class="todo-list">
-    <view class="todo-header">
-      已完成
-    </view>
-    <view
-      wx:for="{{ todos }}"
-      wx:key="{{ index }}"
-      wx:if="{{ item.completed }}"
-      class="todo-list__item ripple fast fadeInRight"
-      style="animation-delay: {{ delay ? index * 0.1 : 0 }}s">
-      <todo-item
-        class="todo-item"
-        todo="{{ item }}"
-        data-index="{{ index }}"
-        bindchange="handleTodoItemChange"
-        bindlongtap="handleTodoLongTap">
-      </todo-item>
     </view>
   </view>
   <view class="todo-add" bindtap="handleAddTodo">+</view>
