--- a/pages/completed/index.wxml
+++ b/pages/completed/index.wxml
@@ -12,10 +12,10 @@
       bindlongtap="handleNoteLongTap"
       bindtouchend="handleNoteTouchEnd">
     </note-card>
+				<button class="mini-btn" type="default" size="mini" data-uuid="{{ item.uuid }}" style="height:33px" bindtap="handleForgot">
+					重新复习
+				</button>
   </view>
-  <view class="ripple bounceIn" wx:if="{{ !notes.length }}">
-    <tips-info text="暂无复习项">
-    </tips-info>
-  </view>
+  <text wx:if="{{!notes.length}}">暂无完成项</text>
   <view class="todo-add" bindtap="handleAddNote">+</view>
 </view>
