--- a/pages/in_progress/index.wxml
+++ b/pages/in_progress/index.wxml
@@ -13,9 +13,6 @@
       bindtouchend="handleNoteTouchEnd">
     </note-card>
   </view>
-  <view class="ripple bounceIn" wx:if="{{ !notes.length }}">
-    <tips-info text="暂无复习项">
-    </tips-info>
-  </view>
+  <text wx:if="{{!notes.length}}">暂无复习项</text>
   <view class="todo-add" bindtap="handleAddNote">+</view>
 </view>
