--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,6 +1,6 @@
 <view class="page">
   <view class="loading">
     <image class="loading__logo" src="../../assets/img/icon-todo.png"></image>
-    <text class="loading__name">Todo List</text>
+    <text class="loading__name">Recall Reminder</text>
   </view>
 </view>
